methods.flowerpot.FlowerPot.scala.code
val jaune = Color.YELLOW
def growFlowers(){
  
}

def flower(c:Colors){
  marque(jaune)
  for(i<- 1 to 4){
    avance()
    marque(c)
    recule()
    gauche()
    
  }
  
  
}

def change(){
  gauche()
  for(i<- 1 to 4){
    avance()
  }
}

def changecentre(){
  setPosition(3,3)
}

def marque(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  
}